--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.show-sql=true
 
 
 
-bot.username=buhoro_innovatsiyalar_u_bot
-bot.token=5783865905:AAGsWArYy2p5DTudfbo6jINl-UERbuh1pmI
-admin.id=1919206144
+bot.username=
+bot.token=
+admin.id=
 
