--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,19 @@
             <version>7.2.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.glassfish.grizzly</groupId>
+            <artifactId>grizzly-http</artifactId>
+            <version>2.4.4</version>
+        </dependency>
+
+
         <!-- https://mvnrepository.com/artifact/com.itextpdf/layout -->
         <dependency>
             <groupId>com.itextpdf</groupId>
@@ -68,6 +81,13 @@
             <artifactId>telegrambots-spring-boot-starter</artifactId>
             <version>6.4.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>5.2.0</version>
+        </dependency>
+
 
     </dependencies>
 
