--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # ===============================
 #       DATABASE
 # ===============================
-spring.datasource.url=jdbc:postgresql://localhost:5432/bukhara_university_bot
-spring.datasource.username=postgres
-spring.datasource.password=2004
+spring.datasource.url=jdbc:postgresql:
+spring.datasource.username=
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
